samples/_failures_safe/1761096665_e6c45f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_045d9728.c: In function ‘main’:
./samples/SAFE/__tmp_045d9728.c:162:9: error: expected declaration or statement at end of input
  162 |         int rows, cols;
      |         ^~~
./samples/SAFE/__tmp_045d9728.c:162:9: error: expected declaration or statement at end of input
